--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bulma": "^0.9.3",
+    "firebase": "^9.8.1",
     "react": "^18.0.0",
     "react-bulma-components": "^4.1.0",
     "react-dom": "^18.0.0",
